[package]
name = "rboss"
version = "0.2.0"
edition = "2021"
authors = ["Yangyang Li"]
homepage = "https://github.com/cauliyang/rboss"
documentation = "https://github.com/cauliyang/rboss"
license = "MIT"
description = "Rust Bioinformatics Toolbox"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3 # Compile dependencies with optimizations on even in debug mode.

[profile.no-opt]
inherits = "dev"
opt-level = 0

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.4.7", features = [
    "wrap_help",
    "derive",
    "color",
    "cargo",
] }
clap-verbosity-flag = "2.1.0"
colored = "2"
env_logger = "0.10"
human-panic = "1.2.1"
indicatif = "0.17"
log = "0.4"

noodles-bam = "0.49.0"
noodles-bgzf = "0.25"
noodles-csi = "0.26"
noodles-fasta = "0.30"
noodles-fastq = "0.9"
noodles-sam = "0.46"
regex = "1.10"

walkdir = "2.4"

# standard crate data is left out
[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
pretty_assertions = "1"
sha256 = "1.4"
