[package]
name = "rboss"
version = "0.3.0"
edition = "2021"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
readme = "README.md"
repository = "https://github.com/cauliyang/rboss"
homepage = "https://github.com/cauliyang/rboss"
documentation = "https://github.com/cauliyang/rboss"
license = "MIT"
description = "Rust Bioinformatics Toolbox"
keywords = ["Bioinformatics", "Graph", "Toolbox"]
categories = ["command-line-interface"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3 # Compile dependencies with optimizations on even in debug mode.

[profile.no-opt]
inherits = "dev"
opt-level = 0

[features]
graph = []

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.4.7", features = ["wrap_help", "derive", "cargo"] }
clap-verbosity-flag = "2.1.0"
clap_complete = "4.4"
colored = "2"
env_logger = "0.10"
human-panic = "1.2.1"
indicatif = "0.17"
log = "0.4"

noodles-bam = "0.51.0"
noodles-bgzf = "0.25"
noodles-csi = "0.28"
noodles-fasta = "0.30"
noodles-fastq = "0.9"
noodles-sam = "0.46"

petgraph = { version = "0.6", features = ["serde-1"] }
plotters = { version = "0.3" }

polars = { version = "0.35", features = ["lazy"] }
rayon = { version = "1.8" }
regex = { version = "1.10" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
walkdir = { version = "2.4" }

# standard crate data is left out
[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
pretty_assertions = "1"
sha256 = "1.4"
tempfile = "3.8"
