[package]
name = "rboss"
version = "0.3.2"
edition = "2021"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
readme = "README.md"
repository = "https://github.com/cauliyang/rboss"
homepage = "https://github.com/cauliyang/rboss"
documentation = "https://github.com/cauliyang/rboss"
license = "MIT"
description = "Rust Bioinformatics Toolbox"
keywords = ["Bioinformatics", "Graph", "Toolbox"]
categories = ["command-line-interface"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3 # Compile dependencies with optimizations on even in debug mode.

[profile.no-opt]
inherits = "dev"
opt-level = 0

[features]
graph = []

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
ahash = "0.8.7"
anyhow = { version = "1.0" }

bio = "1.5.0"
bstr = "1.9"
clap = { version = "4.5.0", features = ["wrap_help", "derive", "cargo"] }
clap-verbosity-flag = "2.1.2"
clap_complete = "4.5"
colored = "2"
env_logger = "0.11"
human-panic = "1.2.3"
indicatif = "0.17"
log = "0.4"
noodles-bam = "0.55"
noodles-bgzf = "0.26"
noodles-core = "0.14"
noodles-csi = "0.30"
noodles-fasta = "0.32"
noodles-fastq = "0.10"
noodles-sam = "0.52"

petgraph = { version = "0.6", features = ["serde-1"] }
plotters = { version = "0.3" }

polars = { version = "0.38", features = ["lazy"] }
rayon = { version = "1.8" }
regex = { version = "1.10" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
walkdir = { version = "2.4" }

# standard crate data is left out
[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
pretty_assertions = "1"
sha256 = "1.5"
tempfile = "3.10"
